# ad_hoc

./: README.md
ROAS-distribution/: main.py  pyproject.toml
ROAS-distribution/queries/: data_collection.sql
cohorts/: Makefile  README.md  pyproject.toml
cohorts/cohorts/: cohort_statistics.py  config_manager.py  test_cohort_statistics.py  test_config_manager.py  test_process_data_for_outliers.py
cohorts/notebooks/: basic_statistics_current_cohort_rules.ipynb  basic_statistics_new_rules.ipynb  cohort_selection.ipynb  create_data.ipynb  cross_validation_new.ipynb  current_hierarchy_stats.ipynb  dimension_ranking.ipynb  perc_gap_investigation.ipynb
cohorts/queries/: current_cohorts.sql  current_recommendations.sql  data_creation.sql
conversion-elasticity/: pyproject.toml
conversion-elasticity/notebooks/: delta_method_v_bootstrap.ipynb  power-analysis.ipynb
conversion-elasticity/queries/: cpc-joker-current.sql  cpc-joker.sql  vfd.sql
error-metrics/: README.md  mbr_error_metrics.py  pyproject.toml
error-metrics/notebooks/: comparing_queries.ipynb  poisson_lower_bound.ipynb
error-metrics/queries/: data_collection.sql  ground_truth.sql  mape_calculation_gt.sql  mbr_metrics.sql
mermaid/recommendations/current/: cpc.mmd  fallbacks.mmd
one-liners/: README.md
reco/: higher_budget_lower_revenue.py
reco/notebooks/: reco_modelling.ipynb
