[project]
name = "roas-distribution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bigquery-magics>=0.10.3",
    "ipython>=9.4.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas-gbq>=0.29.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
]
