[project]
name = "cohorts"
version = "0.1.0"
description = ""
authors = [
    {name = "pdoupe",email = "patrick.doupe@deliveryhero.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "scipy (==1.15.3)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "ipython (>=9.3.0,<10.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "highlight-text (>=0.2,<0.3)",
    "bigframes (>=2.8.0,<3.0.0)",
    "pyarrow (>=10.0.1)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "pyfixest (>=0.29.0,<0.30.0)",
    "altair (>=5.5.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
